[gd_scene load_steps=35 format=3 uid="uid://dtyi1plircs0w"]

[ext_resource type="Script" path="res://Scripts/level_setup.gd" id="1_3fx3n"]
[ext_resource type="Texture2D" uid="uid://bdmtwlgfg5p4m" path="res://Images/Background Images/metal_background.png" id="2_722y8"]
[ext_resource type="Script" path="res://Scripts/bouncer.gd" id="3_epcun"]
[ext_resource type="Texture2D" uid="uid://dhpwlgy2vji4r" path="res://prefabs/Bouncers2.atlastex" id="4_27slv"]
[ext_resource type="Texture2D" uid="uid://bhsedwblj1hpc" path="res://prefabs/Bouncers3.atlastex" id="5_fs2vn"]
[ext_resource type="Texture2D" uid="uid://doj2bi8hhyv7" path="res://prefabs/MagnetPowerForm.atlastex" id="6_mgbow"]
[ext_resource type="Texture2D" uid="uid://ci2b4gn8y3bg6" path="res://prefabs/MagnetActiveForm.atlastex" id="7_emo1w"]
[ext_resource type="Texture2D" uid="uid://b0pcute1q8awa" path="res://prefabs/MagnetActiveForm2.atlastex" id="8_uvmil"]
[ext_resource type="Texture2D" uid="uid://403vbatxe4e6" path="res://sprites/Dotted_Line.png" id="9_636vl"]
[ext_resource type="Texture2D" uid="uid://bekqvjnliex70" path="res://prefabs/HeartsSystem_3lifes.atlastex" id="10_d0hgs"]
[ext_resource type="PackedScene" uid="uid://bdd7y1uep7eae" path="res://prefabs/ball.tscn" id="11_80gs2"]
[ext_resource type="Script" path="res://Scripts/try_again_button.gd" id="12_3jvhy"]
[ext_resource type="Script" path="res://Scripts/level_menu_button.gd" id="13_wgidg"]
[ext_resource type="Script" path="res://Scripts/next_level_button.gd" id="14_86roy"]
[ext_resource type="Script" path="res://Scripts/bricks_in_level.gd" id="15_vrc4l"]
[ext_resource type="Script" path="res://Scripts/brick.gd" id="16_akp3t"]
[ext_resource type="PackedScene" uid="uid://di1mswk628ety" path="res://prefabs/magnet_power_up.tscn" id="17_rntwx"]
[ext_resource type="PackedScene" uid="uid://d10i7o16l7c2q" path="res://prefabs/metal_beam_power_up.tscn" id="18_hjdsw"]
[ext_resource type="Texture2D" uid="uid://dhnx4flhomj4m" path="res://prefabs/Brick(4).atlastex" id="19_y0bui"]
[ext_resource type="Texture2D" uid="uid://dy3mwx5qxa3om" path="res://prefabs/Brick(3).atlastex" id="20_cuxjm"]
[ext_resource type="Texture2D" uid="uid://jrodibporqka" path="res://prefabs/Brick(2).atlastex" id="21_kjekj"]
[ext_resource type="Texture2D" uid="uid://dli6pibkytdmv" path="res://prefabs/Brick(1).atlastex" id="22_3v5rb"]
[ext_resource type="Script" path="res://Scripts/glass_storage.gd" id="23_q2lan"]
[ext_resource type="Texture2D" uid="uid://bpbgompsign7f" path="res://sprites/PowerUpGlassStorage.png" id="24_mj8c4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr6h0"]
size = Vector2(145, 893)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl076"]
size = Vector2(1433, 123)

[sub_resource type="SpriteFrames" id="SpriteFrames_1q3n0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_27slv")
}, {
"duration": 1.0,
"texture": ExtResource("5_fs2vn")
}, {
"duration": 1.0,
"texture": ExtResource("4_27slv")
}],
"loop": false,
"name": &"Ball_hits_bouncer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_mgbow")
}],
"loop": false,
"name": &"Static_magnet",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_emo1w")
}, {
"duration": 1.0,
"texture": ExtResource("8_uvmil")
}],
"loop": true,
"name": &"magnet_bouncer",
"speed": 2.0
}]

[sub_resource type="Gradient" id="Gradient_2seve"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.44, 0.44, 0.44, 0.792157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h3jj2"]
gradient = SubResource("Gradient_2seve")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6k6ug"]
bg_color = Color(0.171, 0.57, 0.171, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1yhf"]
bg_color = Color(0.66, 0.61248, 0.1848, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyjbl"]
bg_color = Color(0.352941, 0.6, 0.6, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_q1s4i"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xt01"]
size = Vector2(117.787, 50.8535)

[node name="Level_3_scene" type="Node2D"]
script = ExtResource("1_3fx3n")
is_timer_level = true
timer_duration = 70.0

[node name="Background" type="TextureRect" parent="."]
offset_left = 803.0
offset_top = -1.0
offset_right = 2595.0
offset_bottom = 1099.0
rotation = 1.5708
scale = Vector2(0.715363, 0.744657)
texture = ExtResource("2_722y8")

[node name="Invisible_walls" type="Node2D" parent="."]

[node name="Walls" type="StaticBody2D" parent="Invisible_walls"]

[node name="Upper_wall" type="CollisionShape2D" parent="Invisible_walls/Walls"]
position = Vector2(401, -73)
rotation = 1.5708
shape = SubResource("RectangleShape2D_hr6h0")

[node name="Left_wall" type="CollisionShape2D" parent="Invisible_walls/Walls"]
position = Vector2(-61, 640)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gl076")

[node name="Right_wall" type="CollisionShape2D" parent="Invisible_walls/Walls"]
position = Vector2(781, 616)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gl076")

[node name="Death_border" type="StaticBody2D" parent="Invisible_walls"]

[node name="Lower_wall" type="CollisionShape2D" parent="Invisible_walls/Death_border"]
position = Vector2(399, 1352)
rotation = 1.5708
shape = SubResource("RectangleShape2D_hr6h0")

[node name="Bouncer" type="CharacterBody2D" parent="."]
position = Vector2(369, 1137)
script = ExtResource("3_epcun")

[node name="Bouncer_sprite_and_animations" type="AnimatedSprite2D" parent="Bouncer"]
sprite_frames = SubResource("SpriteFrames_1q3n0")
animation = &"Ball_hits_bouncer"
speed_scale = 3.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bouncer"]
polygon = PackedVector2Array(-57, -5, -58, 15, -57, 20, 56, 20, 57, 15, 55, -5, 50, -13, 38, -20, 12, -23, -12, -23, -41, -20, -53, -13)

[node name="DottedLine" type="Sprite2D" parent="Bouncer"]
texture = ExtResource("9_636vl")
offset = Vector2(0, -50)

[node name="HeartsSystem3Lifes" type="Sprite2D" parent="."]
position = Vector2(584, 69)
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_d0hgs")

[node name="Ball" parent="." instance=ExtResource("11_80gs2")]
position = Vector2(367, 1133)

[node name="Game_lost_screen" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 125.0
offset_top = 400.0
offset_right = 591.09
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_h3jj2")

[node name="Label" type="Label" parent="Game_lost_screen"]
layout_mode = 0
offset_left = 54.0
offset_top = 23.0
offset_right = 426.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "You lost!"

[node name="Try_again_button" type="Button" parent="Game_lost_screen"]
layout_mode = 0
offset_left = 121.0
offset_top = 233.0
offset_right = 351.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_6k6ug")
text = "Try again"
script = ExtResource("12_3jvhy")

[node name="Level_menu_button" type="Button" parent="Game_lost_screen"]
layout_mode = 0
offset_left = 149.0
offset_top = 328.0
offset_right = 322.175
offset_bottom = 393.35
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r1yhf")
text = "Level menu"
script = ExtResource("13_wgidg")

[node name="Game_won_screen" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 400.0
offset_right = 606.09
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_h3jj2")

[node name="Label" type="Label" parent="Game_won_screen"]
layout_mode = 0
offset_left = 54.0
offset_top = 23.0
offset_right = 426.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "You won!"

[node name="Next_level_button" type="Button" parent="Game_won_screen"]
layout_mode = 0
offset_left = 121.0
offset_top = 233.0
offset_right = 351.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_6k6ug")
text = "Next level"
script = ExtResource("14_86roy")
next_level_scene = "res://Scenes/level_2_scene.tscn"

[node name="Level_menu_button" type="Button" parent="Game_won_screen"]
layout_mode = 0
offset_left = 149.0
offset_top = 328.0
offset_right = 322.175
offset_bottom = 393.35
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r1yhf")
text = "Level menu"
script = ExtResource("13_wgidg")

[node name="Play_again_button" type="Button" parent="Game_won_screen"]
layout_mode = 0
offset_left = 150.0
offset_top = 406.0
offset_right = 323.545
offset_bottom = 473.12
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vyjbl")
text = "Play again"
script = ExtResource("12_3jvhy")

[node name="Bricks_in_level" type="Node2D" parent="."]
script = ExtResource("15_vrc4l")
current_level = "Level 3"

[node name="Brick1" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(218, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
start_brick = 1
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick1"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick1"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("22_3v5rb")

[node name="Brick2" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(273, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
start_brick = 2
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick2"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick2"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("21_kjekj")

[node name="Brick3" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(328, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
start_brick = 3
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick3"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick3"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("20_cuxjm")

[node name="Brick4" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(383, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick4"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick4"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("19_y0bui")

[node name="Brick5" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(438, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
start_brick = 3
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick5"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick5"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("20_cuxjm")

[node name="Brick6" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(493, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
start_brick = 2
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick6"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick6"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("21_kjekj")

[node name="Brick7" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(548, 433)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("16_akp3t")
start_brick = 1
powerup_scenes = Array[PackedScene]([ExtResource("17_rntwx"), ExtResource("18_hjdsw")])
powerup_chances = Array[float]([0.5, 0.5])
brick_4_texture = ExtResource("19_y0bui")
brick_3_texture = ExtResource("20_cuxjm")
brick_2_texture = ExtResource("21_kjekj")
brick_1_texture = ExtResource("22_3v5rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick7"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick7"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("22_3v5rb")

[node name="PowerupsHolder" type="Node2D" parent="."]

[node name="GlassStorage" type="Node2D" parent="."]
position = Vector2(-16, 59)
script = ExtResource("23_q2lan")
slot_count = 2

[node name="Sprite2D" type="Sprite2D" parent="GlassStorage"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("24_mj8c4")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 317.0
offset_top = 21.0
offset_right = 357.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 30

[connection signal="pressed" from="Game_lost_screen/Try_again_button" to="Game_lost_screen/Try_again_button" method="_on_pressed"]
[connection signal="pressed" from="Game_lost_screen/Level_menu_button" to="Game_lost_screen/Level_menu_button" method="_on_pressed"]
[connection signal="pressed" from="Game_won_screen/Next_level_button" to="Game_won_screen/Next_level_button" method="_on_pressed"]
[connection signal="pressed" from="Game_won_screen/Level_menu_button" to="Game_won_screen/Level_menu_button" method="_on_pressed"]
[connection signal="pressed" from="Game_won_screen/Play_again_button" to="Game_won_screen/Play_again_button" method="_on_pressed"]
[connection signal="child_exiting_tree" from="Bricks_in_level" to="Bricks_in_level" method="_on_child_exiting_tree"]
